--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>New year offer</title>
 </head>
 <body>
-<header>
+<header class="banner">
+<div class="banner-content">
+    <h3 class="banner-title">Happy New Year</h3>
+    <h1 class="banner-heading">New Year Party Celebration</h1>
+
+</div>
+    
 
 </header>
 
@@ -19,7 +26,7 @@
 
 <footer>
 
-    
+
 </footer>
 
 
