categories and vector banner added

--- a/index.html
+++ b/index.html
@@ -1,36 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>New year offer</title>
 </head>
+
 <body>
-<header class="banner">
-<div class="banner-content">
-    <h3 class="banner-title">Happy New Year</h3>
-    <h1 class="banner-heading">New Year Party Celebration</h1>
+    <header class="banner">
+        <div class="banner-content">
+            <h3 class="banner-title">Happy New Year</h3>
+            <h1 class="banner-heading">New Year Party Celebration</h1>
 
-</div>
-    
-
-</header>
+        </div>
+    </header>
 
 
-<main>
+    <main>
+
+        <section class="catagories">
+            <div class="catagories-container">
+                <div>
+                    <h1 class="catagorie-title"> 65% OFF</h1>
+                    <p class="catagorie-description">OUR HOLIDAY DEALS ARE BETTER</p>
+                    <h3 class="catagorie-sub-title">ALL CATEGORIES</h3>
+                </div>
+                <div class="catagories-img">
+                    <img src="images/New Year Photo.png">
+                </div>
+            </div>
+        </section>
+
+        <!-- 2nd banner -->
+        <section class="vector-banner">
+            <div class="vector-banner-content">
+                <h1 class="vector-banner-title">Welcome to<br>midnight party</h1>
+                <p class="vector-banner-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie<br> malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <h3 class="vector-join">JOIN NOW</h3>
+            </div>
+            <div class="vector-img">
+                <img src="images/Group 70.png">
+            </div>
+        </section>
 
 
-</main>
 
 
-<footer>
 
 
-</footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        
+    </main>
+
+
+    <footer>
+
+
+    </footer>
 
 
 
 
 </body>
+
 </html>
