deatils banner added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
     <main>
-
+  <!--categories section -->
         <section class="catagories">
             <div class="catagories-container">
                 <div>
@@ -47,6 +47,22 @@
         </section>
 
 
+<section class="details">
+<div class="details-container">
+<div class="details-content">
+    <h2 ><span class="txt-red">Place:</span> New Park Hotel</h2>
+    <h2 > <span  class="txt-red">Date:</span> 31 December Night 2023</h2>
+    <h2 ><span  class="txt-red">Time:</span> Evening 7.30 pm to 12.30 am</h2>
+</div>
+    
+    <div ><button class="join-btn">JOIN NOW</button></div>
+</div>
+
+
+
+
+
+</section>
 
 
 
@@ -69,7 +85,8 @@
 
 
 
-        
+
+
     </main>
 
 
