--- a/index.html
+++ b/index.html
@@ -72,12 +72,13 @@
 
                     <h3 class="offer-title ">NEW BEST OFFER</h3>
                     <h2 class="offer-sub-title">Coming Soon</h2>
-                    <p class="offer-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                    <p class="offer-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                        molestie malesuada. Ipsum sed
                         sodales risus ut pellentesque vel euismod. </p>
 
 
                 </div>
-               
+
             </div>
             <div class="offer-img">
                 <img src="images/Ellipse 1.png">
@@ -85,14 +86,28 @@
             <div class="offer-2024">
                 <h2 class="txt-red">2024</h2>
                 <p class="offer-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
-              <div class="offer-img-2024"><img src="images/Group 96.png"></div>  
+                <div class="offer-img-2024"><img src="images/Group 96.png"></div>
             </div>
-         
+
         </section>
 
 
+<!-- holiday section -->
+        <section class="holiday">
+            <div class="holiday-container">
+                <h2>WHAT IS FUNCTIONAL</h2>
+                <h1 class="holiday-title"><span class="txt-red">Holidays</span> Sale 50%</h1>
+                <p class="holiday-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed<br>
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id<br>
+                    fermentum amet amet sit consectetur.</p>
 
 
+            </div>
+
+
+
+
+        </section>
 
 
 
