gift-box section added

--- a/index.html
+++ b/index.html
@@ -108,7 +108,22 @@
 
 
         </section>
+<!-- gift-box section -->
+        <section class="gift-box">
+             <div class="gift-box-container">
 
+<div class="gift-box-img">
+    <img src="images/Group 75.png">
+    
+</div>
+<div class="discount-img">
+    <img src="images/Group 44.png">
+</div>
+ </div>
+
+
+
+        </section>
 
 
 
