portofilio-section added

--- a/index.html
+++ b/index.html
@@ -92,13 +92,14 @@
         </section>
 
 
-<!-- holiday section -->
+        <!-- holiday section -->
         <section class="holiday">
             <div class="holiday-container">
                 <h2>WHAT IS FUNCTIONAL</h2>
                 <h1 class="holiday-title"><span class="txt-red">Holidays</span> Sale 50%</h1>
                 <p class="holiday-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed<br>
-                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id<br>
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam
+                    id<br>
                     fermentum amet amet sit consectetur.</p>
 
 
@@ -108,18 +109,18 @@
 
 
         </section>
-<!-- gift-box section -->
+        <!-- gift-box section -->
         <section class="gift-box">
-             <div class="gift-box-container">
+            <div class="gift-box-container">
 
-<div class="gift-box-img">
-    <img src="images/Group 75.png">
-    
-</div>
-<div class="discount-img">
-    <img src="images/Group 44.png">
-</div>
- </div>
+                <div class="gift-box-img">
+                    <img src="images/Group 75.png">
+
+                </div>
+                <div class="discount-img">
+                    <img src="images/Group 44.png">
+                </div>
+            </div>
 
 
 
@@ -127,6 +128,37 @@
 
 
 
+
+
+        <!--portfolio section  -->
+
+
+        <section class="portfolio">
+            <div class="portfolio-container">
+                <h3 class="portfolio-title">THE BEST GIFTS</h3>
+                <h2 class="portfolio-heading">Our Awesome Portfolio</h2>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.<br> Ipsum sed
+                    sodales risus ut pellentesque vel euismod. </p>
+
+
+
+            </div>
+            <div class="portfolio-img-container">
+                <div class="imag-line-1">
+                    <img src="images/Rectangle 3.png" alt="">
+                    <img class="middle-img" src="images/Rectangle 4.png" alt="">
+                    <img src="images/Rectangle 5.png" alt="">
+                </div>
+                <div class="imag-line-2">
+                    <img src="images/Rectangle 6.png" alt="">
+                    <img  class="middle-img" src="images/Rectangle 7.png" alt="">
+                    <img src="images/Rectangle 8.png" alt="">
+                </div>
+            </div>
+
+
+
+        </section>
 
 
 
