subscribe section added

--- a/index.html
+++ b/index.html
@@ -131,8 +131,6 @@
 
 
         <!--portfolio section  -->
-
-
         <section class="portfolio">
             <div class="portfolio-container">
                 <h3 class="portfolio-title">THE BEST GIFTS</h3>
@@ -151,7 +149,7 @@
                 </div>
                 <div class="imag-line-2">
                     <img src="images/Rectangle 6.png" alt="">
-                    <img  class="middle-img" src="images/Rectangle 7.png" alt="">
+                    <img class="middle-img" src="images/Rectangle 7.png" alt="">
                     <img src="images/Rectangle 8.png" alt="">
                 </div>
             </div>
@@ -160,8 +158,20 @@
 
         </section>
 
+        <!-- subscribe section  -->
+        <section class="subscribe">
+            <div class="subscribe-container">
+                <img src="images/Group 61.png" alt="" class="subscribe-img">
+                <h1 class="subscribe-title">Subscribe Newsletter</h1>
+                <p class="subscribe-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+<div class="input-field">
 
-
+    <input type="email" placeholder="user@gmail.com">
+    <input type="submit" value="Subscribe">
+</div>
+        </section>
 
 
 
