--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <img src="images/Ellipse 1.png">
             </div>
             <div class="offer-2024">
-                <h2 class="txt-red">2024</h2>
+                <h1 class="txt-red">2024</h1>
                 <p class="offer-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
                 <div class="offer-img-2024"><img src="images/Group 96.png"></div>
             </div>
@@ -174,20 +174,36 @@
         </section>
 
 
-
-
-
-
-
-
-
-
-
-
     </main>
 
 
     <footer>
+<div class="footer-container">
+    <div class="footer-details">
+        <p>44, Big Building Roosevelt Street<br>
+            Beach Gardens Florida 33410</p>
+
+            <div class="footer-details-icons">
+                <img src="icons/Call.png"><span>+00 123 584 124</span><br>
+                <img src="icons/Website.png"><span>www.website.com</span>
+          </div>
+            </div>
+        
+    <div class="footer-icons">
+        <img src="icons/Facebook.png" alt="">
+        <img src="icons/Instagram.png" alt="">
+        <img src="icons/Twitter.png" alt="">
+        <img src="icons/Linkedin.png" alt="">
+    </div>
+    <div class="all-right-reserved">
+        <p>2017, All Rights Reserved.</p>
+        <p>Unsubscribe</p>
+    </div>
+</div>
+
+
+
+
 
 
     </footer>
